oxiplate-derive/tests/broken/char/eof-instead-of-quote.stderr
error: End of file encountered while parsing a character literal
 --> tests/broken/char/eof-instead-of-quote.rs:4:24
  |
4 | #[oxiplate_inline(r"{{ 'h")]
  |                        ^^
